--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync ./build s3://alertservicefe --profile=alertservicefe",
+    "invalidate": "aws cloudfront create-invalidation --profile=alertservicefe --distribution-id E1SAZNIHEQMNGT --paths / /index.html /error.html /service-worker.js /manifest.json /favicon.ico"
   },
   "eslintConfig": {
     "extends": [
